ingress-name-based.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: athul-s-ingress-name-based
  namespace: default

spec:
  rules:
  - host: red.example.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service: 
            name: athul-s-world-red
            port: 
              number: 4242
  - host: blue.example.com
    http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: athul-s-world-blue
                port:
                  number: 4343

  defaultBackend:
    service:
      name: athul-s-world-default
      port:
        number: 80
